refactor(商城): 代码优化